# cmake-deb

./: .gitignore  CMakeLists.txt  README.md  cmake.sh
src/: main.cpp
